FIX: layout of topic list nav on mobile when filtered by a tag

--- a/app/assets/stylesheets/common/base/tagging.scss
+++ b/app/assets/stylesheets/common/base/tagging.scss
@@ -155,7 +155,7 @@ header .discourse-tag {color: $tag-color !important; }
   margin-right: 8px;
 }
 
-.tag-notification-menu {
+.notification-options.tag-notification-menu {
   float: right;
   margin-bottom: 10px;
 }
